--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "wsaefulloh/nova-data-sync",
+  "name": "adevpmftc/nova-data-sync",
   "description": "A Laravel Nova tool for importing and exporting data from CSV or Excel files.",
   "keywords": [
     "laravel",
@@ -17,13 +17,13 @@
   },
   "autoload": {
     "psr-4": {
-      "Wsaefulloh\\NovaDataSync\\": "src/"
+      "AdevPmftc\\NovaDataSync\\": "src/"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Wsaefulloh\\NovaDataSync\\ToolServiceProvider"
+        "AdevPmftc\\NovaDataSync\\ToolServiceProvider"
       ]
     }
   },
